# axum_backend

./: .env.example  .justfile  Cargo.toml  README.md
docs/: architecture_example.md  user_example.rs
migrations/postgres/: 20250909154908_user.up.sql
scripts/: check.sh  run.sh
src/: app.rs  lib.rs  logger.rs  main.rs  response.rs  state.rs
src/config/: backend_server.rs  frontend_server.rs  mail_server.rs  mod.rs  postgres_server.rs  redis_server.rs  surrealdb_server.rs
src/custom/: responder.rs
src/custom/errors/: app_error.rs  from.rs  mod.rs  password.rs  validation.rs
src/database/: client.rs  init.rs  mod.rs
src/database/postgres/: client.rs
src/database/redis/: client.rs
src/dtos/: api_response.rs  mod.rs
src/errors/: app_error.rs  mod.rs  validation.rs
src/handlers/: auth.rs  health.rs
src/models/: user.rs
src/repositories/: user.rs
src/routes/: mod.rs  public.rs
src/services/: user.rs
